--- a/ConsoleApp4/ConsoleApp4/ConsoleApp6.csproj
+++ b/ConsoleApp4/ConsoleApp4/ConsoleApp6.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IJavascriptCommentsProcessor.cs" />
+    <Compile Include="JavascriptCommentsProcessor.cs" />
     <Compile Include="Program1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
